--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,36 @@
-# compiled output
+# Critical Security & Dependencies
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+node_modules/
+
+# Compiled output
 /dist
-/node_modules
 /build
+/out
 
 # Logs
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# OS
+# OS & IDEs
 .DS_Store
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # Tests
 /coverage
 /.nyc_output
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
-# temp directory
-.temp
-.tmp
 
 # Runtime data
 pids
 *.pid
 *.seed
 *.pid.lock
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
