--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "format": "prettier --write \"**/*.js\"",
-    "start": "babel-node index.js",
-    "start:dev": "nodemon",
-    "test": "jest",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "build": "babel src --out-dir dist",
+    "start": "node dist/main.js",
+    "start:dev": "nodemon --exec babel-node src/main.js",
+    "start:prod": "node dist/main.js"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mongoose": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
@@ -25,7 +24,8 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.28.4",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.4",
     "@babel/node": "7.28.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/plugin-proposal-decorators": "7.28.0",
@@ -36,6 +36,7 @@
     "@babel/preset-env": "7.28.3",
     "@babel/register": "7.28.3",
     "@babel/runtime": "7.28.4",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "jest": "30.2.0",
     "nodemon": "3.1.10",
